k8s/vps/apps/fcs-identity/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: swagger-auth
  namespace: fcs-identity
spec:
  basicAuth:
    secret: identity-swagger-basic-auth
