k8s/vps/apps/fcs-identity/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fcs-identity
  labels:
    app.kubernetes.io/part-of: fcs
    app.kubernetes.io/name: fcs-identity
    environment: vps
