k8s/vps/apps/fcs-identity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcs-identity-service
  namespace: fcs-identity
  labels:
    app.kubernetes.io/name: fcs-identity
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fcs-identity
  ports:
    - name: http
      port: 8080
      targetPort: http
