k8s/vps/apps/fcs-identity/ingress-swagger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcs-identity-swagger
  namespace: fcs-identity
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: fcs-identity-swagger-auth@kubernetescrd
spec:
  ingressClassName: fcs-traefik
  rules:
    - host: fcs-identity.flaviojcf.com.br
      http:
        paths:
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: fcs-identity-service
                port:
                  number: 8080
